# TestTask

./: CMakeLists.txt
inc/: Curves.h
src/: Curves.cpp  Main.cpp
